--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               </figure>
             </div>
           </div>
-          <button type="button" class="btn btn-dark mt-3" id="btn" data-mdb-ripple-init>Random</button>
+          <button type="button" class="btn btn-dark mt-3" id="btn" data-mdb-ripple-init>Start</button>
         </div>
         
       </div>
